# hyperwave

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: conf.py  index.rst  solver.rst
hyperwave/: __init__.py  solver.py
hyperwave/solver/: __init__.py  fdtd.py  grids.py  modes.py  sampling.py  solve.py  typing.py  utils.py
notebooks/: resonator.ipynb
tests/: test_solver.py
